# trading-agent

./: .env.example  .gitignore  AGENT_FRAMEWORK_TODO.md  README.md  SKILL.md  TODO.md  fund_intc.json  pyproject.toml  trend_intc.json
config/: bitget_symbols.json
docs/: us_stock_sentiment_attack_pullback.md  us_stock_sentiment_development_plan.md
prompts/: output_schema.md  swing_analyst.md
scripts/: batch_scan.py  fetch_data.py  fundamentals.py  generate_full_chain_report.py  generate_us_stock_sentiment_report.py  report_html.py  risk_calculator.py  sync_bitget_symbols.py  trend_analysis.py
src/trading_agent/: __init__.py  analyzer.py  cli.py  data.py  decision.py  exceptions.py  fundamentals.py  history.py  logic.py  monitor.py  reporter.py  research.py  risk.py  scanner.py  sentiment.py  state.py  symbols.py  trend.py  utils.py  yfinance_data.py
tests/: test_analyzer.py  test_data.py  test_data_source_policy.py  test_decision.py  test_finnhub_integration.py  test_fundamentals.py  test_history.py  test_logic.py  test_monitor.py  test_research.py  test_risk_calculator.py  test_scanner.py  test_sentiment.py  test_sentiment_cli.py  test_state.py  test_symbols.py  test_trend_analysis.py  test_yfinance_data.py  test_yfinance_data_fallback.py
